syntax="proto3";

package proto;
option go_package="todo-service/proto";

service TodoService {
  rpc Create(CreateTodoRequest) returns (CreateTodoResponse);
  rpc GetById(GetByIdRequest) returns (GetTodoResponse);
  rpc GetAll(GetAllTodosRequest) returns (GetAllResponse);
  rpc Delete(DeleteTodoRequset) returns (DeleteTodoResponse);
  rpc Update(UpdateTodoRequest) returns (UpdateTodoResponse);
}

message CreateTodoRequest {
  string user_id = 1;
  string description = 2;
  string title = 3;
}

message CreateTodoResponse {
  string id = 1;
  string user_id = 2;
  string description = 3;
  string title = 4;
}
message Todo {
  string id = 1;
  string user_id = 2;
  string description = 3;
  string title = 4;
}

message GetByIdRequest {
  string id = 1;
}

message GetTodoResponse{
  string id = 1;
  string user_id = 2;
  string description = 3;
}
message GetAllTodosRequest {}

message GetAllResponse {
  repeated Todo todos = 1;
}

message DeleteTodoRequset {
  string id = 1;
}
message DeleteTodoResponse {
  string id = 1;
}

message UpdateTodoRequest{
  string id = 1;
  string user_id = 2;
  string description = 3;
  string title = 4;
}

message UpdateTodoResponse {
  string id = 1;
}